--- a/doc/overview.org
+++ b/doc/overview.org
@@ -5,17 +5,19 @@
    
    The [[file:images/immutant-runtime.png][Immutant runtime]] compared to [[file:images/tomcat-runtime.png][Jetty or Tomcat]]
 
-   Simpler to manage
-   All provided services scaled same way: clustering
+*** simpler to manage
+*** all provided services scaled same way
+    add a node to the cluster
 
 ** Analogous to an operating system
 
-   OS provides sockets, file systems, init.d, etc
-   AS provides clustering, messaging, scheduling, etc
+*** OS provides sockets, file systems, init.d, etc
+*** AS provides clustering, messaging, scheduling, etc
 
 ** Better resource utilization
 *** RAM
-    One Immutant with 3 apps vs 3 Jetty instances
+    - 1 Immutant with 3 apps > 3 Jetty instances
+    - 1 Immutant with 3 *web* apps = 1 Jetty with 3 apps
 *** Disk
     Dependent libs in ~/.m2/repository
 
@@ -32,23 +34,21 @@
   
 ** Tasks
 
-   lein immutant install
+   - lein immutant install
+   - lein immutant overlay
 
-   lein immutant overlay
+   - lein immutant run
 
-   lein immutant run
+   - lein new immutant foo
+   - lein immutant init
 
-   lein new immutant foo
+   - lein immutant deploy
+   - lein immutant undeploy
 
-   lein immutant deploy
+   - lein immutant version
+   - lein immutant env
 
-   lein immutant undeploy
-
-   lein immutant version
-
-   lein immutant env
-
-   lein immutant test
+   - lein immutant test
 
 
 * Immutant libraries
@@ -169,6 +169,10 @@
 
 
 * Other stuff
+** Videos
+   - [[http://www.infoq.com/presentations/Introducing-Immutant][Clojure/West 2012]] -- a dated overview of 5/6 of the api's
+   - [[http://www.youtube.com/watch?v%3DP9tfxdcpkCc][Clojure/Conj 2012]] -- building a non-trivial app with an Immutant REPL
+   - [[http://www.youtube.com/watch?v%3DKqdY0wz_Rb0][Overlay Screencast]] -- overlay TorqueBox to share messaging/caching 
 ** Overlay
 
    checkout the [[http://immutant.org/news/2013/03/07/overlay-screencast/][screencast]] 
@@ -201,11 +205,5 @@
      $ lein immutant test
 
 ** Web sockets COMING SOON (eventually... we hope)
-
-
-* Videos
-  - [[http://www.infoq.com/presentations/Introducing-Immutant][Clojure/West 2012]] -- a dated overview of 5/6 of the api's
-  - [[http://www.youtube.com/watch?v%3DP9tfxdcpkCc][Clojure/Conj 2012]] -- building a non-trivial app with an Immutant REPL
-  - [[http://www.youtube.com/watch?v%3DKqdY0wz_Rb0][Overlay Screencast]] -- overlay TorqueBox to share messaging/caching 
 
 
