Immutant no longer depends on java.jdbc so the app must drag it in

--- a/doc/overview.org
+++ b/doc/overview.org
@@ -39,7 +39,7 @@
 
    - lein immutant run
 
-   - lein new immutant foo
+   - lein immutant new foo
    - lein immutant init
 
    - lein immutant deploy
