--- a/doc/overview.org
+++ b/doc/overview.org
@@ -184,8 +184,8 @@
 ** Videos
 
    - [[http://www.infoq.com/presentations/Introducing-Immutant][Clojure/West 2012]] -- a dated overview of 5/6 of the api's
-   - [[http://www.youtube.com/watch?v%3DP9tfxdcpkCc][Clojure/Conj 2012]] -- building a non-trivial app with an Immutant REPL
-   - [[http://www.youtube.com/watch?v%3DKqdY0wz_Rb0][Overlay Screencast]] -- overlay TorqueBox to share messaging/caching
+   - [[http://www.youtube.com/watch?v=P9tfxdcpkCc][Clojure/Conj 2012]] -- building a non-trivial app with an Immutant REPL
+   - [[http://www.youtube.com/watch?v=KqdY0wz_Rb0][Overlay Screencast]] -- overlay TorqueBox to share messaging/caching
 
 ** Overlay
    
