--- a/doc/overview.org
+++ b/doc/overview.org
@@ -82,7 +82,7 @@
      stacktraces?, :auto-reload?, :reload-paths
    - handy reflection functions in immutant.util
 
-   examples: [[../src/demo/web.clj::(ns%20demo.web][demo/web.clj]]
+   examples: [[../src/demo/web.clj][demo/web.clj]]
 
 ** immutant.messaging
 
@@ -110,7 +110,7 @@
      - (listen)
      - (respond)
 
-   Examples: [[../src/demo/messaging.clj::(ns%20demo.messaging][demo/messaging.clj]]
+   Examples: [[../src/demo/messaging.clj][demo/messaging.clj]]
 
 *** immutant.pipeline
 
@@ -147,7 +147,7 @@
     | :repeat | # of repeats after initial firing; requires :every                   |
     | :until  | java.util.Date, millis since epoch, or "HHmm"                        |
 
-    Examples: [[../src/demo/jobs.clj::(ns%20demo.jobs][demo/jobs.clj]]
+    Examples: [[../src/demo/jobs.clj][demo/jobs.clj]]
 
 ** immutant.cache
 
@@ -160,14 +160,14 @@
    - can be shared with ruby apps in overlaid-torquebox
    - mutable operations in [[http://immutant.org/builds/LATEST/html-docs/apidoc/immutant.cache.html#var-Mutable][immutant.cache/Mutable]] protocol
 
-   Examples: [[../src/demo/cache.clj::(ns%20demo.cache][demo/cache.clj]]
+   Examples: [[../src/demo/cache.clj][demo/cache.clj]]
 
 ** immutant.daemons
 
    - pretty darn [[http://immutant.org/builds/LATEST/html-docs/apidoc/immutant.daemons.html#var-Daemon][simple]]
    - most interesting as HA singleton in cluster
 
-   Examples: [[../src/demo/daemons.clj::(ns%20demo.daemons][demo/daemons.clj]]
+   Examples: [[../src/demo/daemons.clj][demo/daemons.clj]]
 
 ** immutant.xa
 
@@ -176,7 +176,7 @@
    - use immutant.xa/datasource to create transactional resources
    - macros instead of scope annotations, e.g. required, requires-new, not-supported
 
-   Examples: [[../src/demo/xa.clj::(ns%20demo.xa][demo/xa.clj]]
+   Examples: [[../src/demo/xa.clj][demo/xa.clj]]
 
 
 * Other stuff
